--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mini-diary",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "A journal app focused on simplicity.",
   "main": "main.js",
   "scripts": {
@@ -11,5 +11,8 @@
   "license": "MIT",
   "devDependencies": {
     "electron": "^33.3.1"
+  },
+  "dependencies": {
+    "flexsearch": "^0.7.43"
   }
 }
