--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "start": "electron-forge start",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "package": "electron-forge package",
     "make": "electron-forge make"
   },
@@ -20,9 +20,11 @@
     "@electron-forge/plugin-auto-unpack-natives": "^7.6.0",
     "@electron-forge/plugin-fuses": "^7.6.0",
     "@electron/fuses": "^1.8.0",
-    "electron": "^33.3.1"
+    "electron": "^33.3.1",
+    "jest": "^29.7.0"
   },
   "dependencies": {
+    "dotenv": "^16.4.7",
     "electron-squirrel-startup": "^1.0.1",
     "flexsearch": "^0.7.43"
   }
